--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
   <!-- Header -->
   <header>
     <h1>Cool Pics 📷</h1>
-    <nav>
-      <a href="../index.html">Home</a>
+    <button id="menu-button">Menu</button>
+    <nav class="hide">
+      <a href="#">Home</a>
+      <a href="#">Gallery</a>
+      <a href="#">About</a>
     </nav>
   </header>
 
